Fixed button spacing when stacked

--- a/movies/static/movies/style.css
+++ b/movies/static/movies/style.css
@@ -6,5 +6,9 @@ a {
 a:active,
 a:hover {
   text-decoration: none;
-  color: black
+  color: black;
+}
+
+.btn-primary {
+    margin-top: 5px;
 }
